<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/view_color"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_bink_type"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white"
        android:navigationIcon="@mipmap/community_main_details_back"
        app:layout_collapseMode="pin"
        app:theme="@style/MyStyle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_bink_card"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </android.support.v7.widget.Toolbar>

    <com.canka.bootstepview.view.ReboundScrollView
        android:id="@+id/scrollview_bink_type"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.canka.bootstepview.view.BootStepView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:paddingBottom="50dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="40dp"
                app:circular_color="@color/colorAccent"
                app:circular_size="15dp"
                app:default_color="@color/actionsheet_gray"
                app:text_color="@color/colorAccent"
                app:three_color="false"
                app:two_color="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bink_type"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_bink_type_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="@color/view_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/tv_add_bink_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_phone"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_bink_type_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/edit_hint_phone"
                    android:textCursorDrawable="@drawable/edittext_cursor_colors"
                    android:layout_marginLeft="50dp"
                    android:background="@null"
                    android:textSize="18sp" />

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/bink_explain"
                android:textColor="@color/free_community_item_colors"
                android:textSize="14sp" />


            <Button
                android:id="@+id/btn_bink_type_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="25dp"
                android:background="@color/title_text_color_night"
                android:text="@string/attribute_selection_nextstep"
                android:textColor="@color/white" />
        </LinearLayout>
    </com.canka.bootstepview.view.ReboundScrollView>
</LinearLayout>
